fixed flicker 2

--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,7 @@ section {
     height: 100vh;
     scroll-snap-align: center;
     padding: 10px;
+    overflow: hidden;
 
 }
 
